# challenge-backend

./: pyproject.toml
.github/workflows/: python-app.yml
src/: config.py  main.py
src/aws/: s3.py
src/catalog/: router.py  schema.py  service.py
